# YADQL

./: .gitignore  README.md
client/: Cargo.toml  README.md  keypair.sh
client/src/: main.rs
contract/: README.md  YADQL_storage.sol  truffle.js
contract/contracts/: Storage.sol  YadqlStorage.sol
contract/migrations/: 2_deploy_contracts.js
lib/: Cargo.toml  README.md
lib/src/: blockchain.rs  crypt.rs  lib.rs
lib/src/blockchain/: blockchain.rs  contract_address  mod.rs  stream.rs
lib/src/compiled/: yadql.abi
lib/src/core/: keywords.rs  mod.rs
lib/src/crypt/: crypt.rs
lib/src/parser/: YADQL.test  err.rs  grammar.rustpeg  parser.rs
