[package]
name = "yadql"
version = "0.1.0"
authors = [
  "Sean Batzel <romulus108@protonmail.com>",
  "Andrew Plaza <aplaza@liquidthink.net>"
]
build = "src/build.rs"

[dependencies]
colored = "1.5.2"
gpgme = "0.7.0"
serde = "1.0.27"
serde_derive = "1.0.27"
regex = "0.2"
web3 = "0.1.0"
ethabi = "4.2.0"

[build-dependencies]
peg = "0.5.4"
